UtahLiveDataTest/src/objects/GrantContact__c.object
<CustomObject>
    <description>[Business]  Stores all the information related toe the Award Contact</description>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Grant_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Grant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditAndDelete__c</fullName>
        <formula>OR( ISPICKVAL( Award__r.Status__c , &apos;Approved&apos;),ISPICKVAL( Award__r.Status__c , &apos;Activated&apos;),ISPICKVAL( Award__r.Status__c , &apos;Being Amended&apos;),ISPICKVAL( Award__r.Status__c , &apos;Amended&apos;) )</formula>
        <label>HideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program Contact</fullName>
                </value>
                <value>
                    <fullName>Fiscal Contact</fullName>
                </value>
                <value>
                    <fullName>Federal/Sponsor Contact</fullName>
                </value>
                <value>
                    <fullName>Signature Authority</fullName>
                </value>
                <value>
                    <fullName>KeyPOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Contact__r.AccountRecordType__c</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Award Contact</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Grant Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>